- feat: enhance CSS styles for improved layout and responsiveness; - Added max width to extension - Added max height to extension - made extension compatible with chromium browser again - added text when no item available inside RSS mode - made loading-icon no selectable anymore - made the scrollbar hidden if uneeded and customized it a bit for better itergration with the program - made font ziez bigger for the filter options - fixed bug in chromium browser where the fiter options where not sized correctly - re-wroted the extension description - updated README

--- a/assets/styles/Classic.css
+++ b/assets/styles/Classic.css
@@ -19,10 +19,25 @@ body::after {
     position: absolute;
     top: 50px;
     width: 98vw;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
+	/*scrollbar-width: none;*/
     height: 500px;
 }
+
+.HDRSS::-webkit-scrollbar {
+    width: 4px;
+}
+
+.HDRSS::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.HDRSS::-webkit-scrollbar-thumb {
+    background-color: var(--Btn);
+    border-radius: 999px;
+}
+
 #HDRSSBtn {
     display: flex;
     width: 100%;
